--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@datalust/winston-seq": "^3.0.1",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "copyfiles": "^2.4.1",
     "dotenv": "^16.5.0",
@@ -38,6 +40,7 @@
     "@types/node": "^22.15.2",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/winston": "^2.4.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
